--- a/bezman_shop/accounts/templates/accounts/customer.html
+++ b/bezman_shop/accounts/templates/accounts/customer.html
@@ -1,9 +1,9 @@
 <table>
     <tr>
-        <td>Image</td>
-        <td>Full Name</td>
-        <td>Address</td>
-        <td>Phone</td>
+        <th>Image</th>
+        <th>Full Name</th>
+        <th>Address</th>
+        <th>Phone</th>
 
     </tr>
      {% for customer in customers  %}
