добавила тег тh

--- a/bezman_shop/accounts/templates/accounts/getcustomer.html
+++ b/bezman_shop/accounts/templates/accounts/getcustomer.html
@@ -1,10 +1,10 @@
 <table>
     <tr>
-        <td>Image</td>
-        <td>Full Name</td>
-        <td>Address</td>
-        <td>Phone</td>
-        <td>Order</td>
+        <th>Image</th>
+        <th>Full Name</th>
+        <th>Address</th>
+        <th>Phone</th>
+        <th>Order</th>
     </tr>
     <tr>
     <td><img src="{{ order.product.image.url}}" width="150" height="80"></td>
