--- a/bezman_shop/supershop/templates/supershop/order-List.html
+++ b/bezman_shop/supershop/templates/supershop/order-List.html
@@ -14,11 +14,11 @@
         <td>{{orders_delivered}}</td>
     </tr>
     <tr>
-        <td>Product Image</td>
-        <td>Product Name</td>
-        <td>Date</td>
-        <td>Status</td>
-        <td>Customer</td>
+        <th>Product Image</th>
+        <th>Product Name</th>
+        <th>Date</th>
+        <th>Status</th>
+        <th>Customer</th>
     </tr>
     {% for order in orders %}
     <tr>
