--- a/bezman_shop/accounts/templates/accounts/profile.html
+++ b/bezman_shop/accounts/templates/accounts/profile.html
@@ -1,16 +1,71 @@
 {% load static %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <!--  This file has been downloaded from bootdey.com    @bootdey on twitter -->
+    <!--  All snippets are MIT license http://bootdey.com/license -->
+    <title>profile with data and skills - Bootdey.com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+    	body{
+    margin-top:20px;
+    color: #1a202c;
+    text-align: left;
+    background-color: #e2e8f0;
+}
+.main-body {
+    padding: 15px;
+}
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
+}
+
+    </style>
 </head>
 <body>
-
 <div class="container">
     <div class="main-body">
 
@@ -23,13 +78,15 @@
             </ol>
           </nav>
           <!-- /Breadcrumb -->
-
+          <form action="" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
           <div class="row gutters-sm">
             <div class="col-md-4 mb-3">
               <div class="card">
                 <div class="card-body">
                   <div class="d-flex flex-column align-items-center text-center">
-                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                    <img src="{{request.user.customer.image.url}}" alt="Admin" class="rounded-circle" width="150">
+                    {{form.image}}
                     <div class="mt-3">
                       <h4>Nazira</h4>
                       <p class="text-secondary mb-1">Full Stack Developer</p>
@@ -65,7 +122,7 @@
                 </ul>
               </div>
             </div>
-            <div class="col-md-8">
+
               <div class="card mb-3">
                 <div class="card-body">
                   <div class="row">
@@ -82,7 +139,7 @@
                       <h6 class="mb-0">Email</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{ form.mail }}
+                      {{ form.mail.ru }}
                     </div>
                   </div>
                   <hr>
@@ -100,7 +157,7 @@
                       <h6 class="mb-0">Mobile</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-
+                      (320) 380-4539
                     </div>
                   </div>
                   <hr>
@@ -111,10 +168,11 @@
                     <div class="col-sm-9 text-secondary">
                       {{ form.address }}
                     </div>
-                       <input type="submit" name="submit" id="submit" class="form-submit submit" value="обновить"/>
                   </div>
                 </div>
               </div>
+               <input type="submit" name="submit" id="submit" class="form-submit submit" value="обновить"/>
+
               <div class="row gutters-sm">
                 <div class="col-sm-6 mb-3">
                   <div class="card h-100">
@@ -175,8 +233,11 @@
           </div>
         </div>
     </div>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script type="text/javascript">
 
-
+</script>
 </body>
 </html>
-
+      </form>
